Update README and add comparative analysis notebook for Keras and PyTorch models
- Revised the AI Capstone Project section in the README to reflect the new comparative analysis of Keras and PyTorch models for satellite image classification.
- Added a new Jupyter notebook for the comparative analysis, detailing model evaluation metrics, including accuracy, precision, recall, F1 score, and ROC-AUC.
- Updated .gitignore to exclude model files and added entries for Keras and PyTorch model artifacts.
- Removed outdated Keras and PyTorch model files from the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # Python virtual environment
 venv/
 *.venv/
+*.keras
+*.pth
 
 # IDE settings
 .vscode/
@@ -12,3 +14,7 @@ venv/
 # OS-specific files
 .DS_Store
 Thumbs.db
+
+# Model files
+*.keras
+*.pth
